feat : add endpoint transaction history
